Work on item controller and docs.

--- a/docbuild/articles/toc.yml
+++ b/docbuild/articles/toc.yml
@@ -14,7 +14,7 @@
   href: next-steps.md
 - name: Handling Assets
   href: handling-assets.md
-- name: Web API
+- name: Creating a Web API
   href: web-api.md
 - name: About This Site
   href: about-this-site.md
